<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="progress">In progress</string>
    <string name="terminated">Terminated</string>
    <string name="favorite">Favorite</string>
    <string name="about">About</string>
    <string name="More">more</string>
    <string name="search">Search</string>
    <string name="trial">Trial period</string>
    <string name="competitive">Competitive Entrance Exams</string>
    <string name="staff">Staff members</string>
    <string name="galerie">Gallery</string>
    <string name="account"><![CDATA[Account & Registration]]></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject">Subject</string>
    <string name="yes_start">Yes Start</string>
    <string name="no">No</string>
    <string name="start_paper1_message">Do you want to start this exam? Once you start a xx-hour stopwatch starts. If you are ready click start.</string>
    <string name="start_paper3_message">Do you want to start this exam? If you are ready click start.</string>
    <string name="whatsapp"> .  WhatsApp</string>
    <string name="requierement">Requirement</string>
    <string name="requierements">Requirements</string>
    <string name="tutorials">Tutorials</string>
    <string name="image">Image</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="name_of_parent_1">Parent number1</string>
    <string name="name_of_parent_2">Parent number2</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="enter_registration_code">Enter registration code</string>
    <string name="welcome">Welcome to My Mentor - Concours</string>
    <string name="login">Log in</string>
    <string name="singin">Sing In</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="bad_informations">Bad informations, verify and try again!</string>
    <string name="enable">Enable</string>
    <string name="error">Error! please try again.</string>
    <string name="email">Email</string>
    <string name="correction">Correction</string>
    <string name="finish">Finish</string>
    <string name="_00_00">00:00</string>
    <string name="back">Back</string>
    <string name="awnser_1">Awnser 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="facebook">.     Facebook</string>
    <string name="see_correction">See correction</string>
    <string name="your_score">Your score</string>
    <string name="yes">Yes</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="see_result">See result</string>
    <string name="restart">Restart</string>
    <string name="close_and_back"><![CDATA[Close & Back]]></string>
    <string name="singup">Sign Up</string>
    <string name="indication_signup">Log in your account</string>
    <string name="indication_login">Register your new account</string>
    <string name="login_whith_my_account">Login with my account</string>
    <string name="my_mentor">My Mentor</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an account</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="student">Student</string>
    <string name="personal_informations">Personal informations</string>
    <string name="go_back">Go back</string>
    <string name="note_text">you have xx corrects answer of yy. Do you want to restart or see result?</string>
    <string name="cancel_test">Do you want cancel this Test??</string>
    <string name="time_over">TIME OVER</string>
    <string name="message_star">Go away! You have xxh and yym left.</string>
    <string name="message_star2">You have xxh and yym left</string>
    <string name="message_star3">You have 10 minutes left.</string>
    <string name="message_star4">You have 5 minutes left.</string>
    <string name="close_correction">Do you want to close this correction?</string>
    <string name="finish_test">have you finish to answering?</string>
    <string name="no_internet">No internet connexion! Please check it and retry.</string>
    <string name="your_are_not_register">Your are not register!</string>
    <string name="no_register_message">do you want to contact support assistance to get the register code? choose somebody person of staff member and click to whatsapp or facebook icon to contact him.</string>
    <string name="update_fail">Update Failed</string>
    <string name="error_server">Internal error to server</string>
    <string name="xx_yy">xx/yy</string>
    <string name="_1">1</string>
    <string name="_00">00</string>
    <string name="paper_not_exist">This paper are not download or not exist.</string>
    <string name="no_chapter">No chapter available for this competitive</string>
    <string name="no_tutorial">No tutorial found to this Entrance Exam. If you are connected to internet, you can try to download it. Would you like that?</string>
    <string name="no_sessions">No sessions found to this Entrance Exam. If you are connected to internet, you can try to download it. Would you like that?</string>
    <string name="no_requierement">No requirement found to this Entrance Exam. If you are connected to internet, you can try to download it. Would you like that?</string>
    <string name="contact_details">Contact details</string>
    <string name="parents">Parents</string>
    <string name="registration">Registration</string>
    <string name="question_download">Questions Downloaded! you can start test now</string>
    <string name="app_name">My Mentor - Concours</string>
    <string name="app_description">My Mentor - Concours is an application designed by vitteck, for the My Mentor Group with the aim of providing a permanent solution to the needs of students preparing for exams and competitive entrance.</string>
    <string name="pasts_questions">Pasts Question</string>
    <string name="tutorials_questions">Tutorials Question</string>
    <string name="tutorials_notes">Tutorials Notes</string>
    <string name="version">version</string>
    <string name="last_update">Last Update</string>
    <string name="current_version">1.1.0.0</string>
    <string name="last_update_date">July 2020</string>
    <string name="term_of_services">Term of services</string>
    <string name="start_update_data">Find update data</string>
    <string name="end_update_data">All data is update!</string>
    <string name="updated_data">the data has been updated</string>
    <string name="app_short_description">My Mentor notification</string>
    <string name="cancel">Cancel</string>
    <string name="type_the_note">Type the note</string>
    <string name="cancel_note">Are you sure to cancel this note?</string>
    <string name="edit">Edit</string>
    <string name="note_save">Note saved</string>
    <string name="my_blocnote">My-BlocNote</string>
    <string name="exam_sessions">Exam Sessions</string>
    <string name="turorials">Tutorials</string>
    <string name="answer_5">Answer 5</string>
    <string name="answer_6">Answer 6</string>
    <string name="close">Close</string>
    <string name="no_exam">Any exam available for this School</string>
    <string name="no_question">No question for this Session Exam</string>
    <string name="no_subject">No Subject for this School.</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="cancel_no_data_found">No data Found! Would you like to find data online?</string>
    <string name="donwload_finish">Donwload finish</string>
    <string name="downlaod_finish_with_error">The Download of data is finish but with xx errors. Would you like to start anyway the application or retry the download ?</string>
    <string name="no_retry">No, retry</string>
    <string name="_20_07_2020">20/07/2020</string>
    <string name="data_error">Data error</string>
</resources>
