<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp">
    <androidx.cardview.widget.CardView
        android:elevation="6dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/colorAccent"
        tools:targetApi="lollipop">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/numero"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/_1" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/question"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:textColor="@color/textColorBlack"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/answers"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintStart_toStartOf="@id/question"
        app:layout_constraintEnd_toEndOf="@id/question"
        android:layout_marginStart="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">

        <RadioButton
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:visibility="gone"
            android:text="@string/awnser_1" />

        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:visibility="gone"
            android:text="@string/answer_2" />

        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:visibility="gone"
            android:text="@string/answer_3" />

        <RadioButton
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:visibility="gone"
            android:text="@string/answer_4" />

        <RadioButton
            android:id="@+id/answer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:visibility="gone"
            android:text="@string/answer_5" />

        <RadioButton
            android:id="@+id/answer6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:visibility="gone"
            android:text="@string/answer_6" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_indication"
        app:layout_constraintTop_toBottomOf="@id/answers"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        android:textSize="12sp"
        android:background="@drawable/background_blue"
        android:drawableTop="@drawable/ic_info_black_24dp"
        android:padding="8dp"
        android:textColor="@color/textColorBlack"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginStart="50dp"
        android:visibility="gone"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:text="@string/app_description" />
</androidx.constraintlayout.widget.ConstraintLayout>