<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:paddingTop="40dp"
    tools:context=".ui.identification.IdentificationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miag"
            android:textSize="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/number_login"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_background1"
                android:hint="@string/username"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color"
                android:ems="10"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/password_login"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_background1"
                android:hint="@string/password"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_login"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:background="@drawable/button_background"
                android:textColor="@color/color_white"
                android:text="@string/login" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/forgot_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="12sp"
                android:text="@string/do_not_have_an_account" />

            <Button
                android:id="@+id/text_singin"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:background="@drawable/button_background_outline"
                android:text="@string/create_an_account"
                android:textColor="@color/text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_singin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/name_singin"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_background1"
                android:hint="@string/username"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color"
                android:ems="10"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/number_singin"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_background1"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/password_singin"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_background1"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color" />

            <Button
                android:id="@+id/button_singin"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:background="@drawable/button_background"
                android:textColor="@color/color_white"
                android:text="@string/singin" />

            <Button
                android:id="@+id/text_login"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:background="@drawable/button_background_outline"
                android:text="@string/login_whith_my_account"
                android:textColor="@color/text_color"/>

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>