<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/edittext_background1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:paddingBottom="30dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">
    <Button
        android:layout_gravity="end"
        android:gravity="center"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:id="@+id/back"
        android:drawableStart="@drawable/ic_close"
        android:layout_marginStart="10dp"/>
    <LinearLayout
        android:id="@+id/card"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:background="@drawable/cercle_1">

        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:text="@string/xx_yy"
            android:textStyle="bold"
            android:textSize="28sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:textColor="@color/text_color"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="@string/note_text"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:textAllCaps="false"
            android:id="@+id/restart"
            android:textColor="@color/text_color"
            android:background="@drawable/background_button_white"
            android:text="@string/restart"
            android:layout_alignParentStart="true"
            />

        <Button
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:background="@drawable/button_background"
            android:layout_marginEnd="10dp"
            android:id="@+id/result"
            android:text="@string/see_result"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>



</LinearLayout>